# ITMO-UNIVERSITY

./: .gitignore  README.md
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/lecture/: ModulesPackagesImport.ipynb  setup.cfg
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/lecture/examples/: allstar.py  circle.py  cycle_bar.py  cycle_foo.py  happy.py  happytest.py  nameleak.py
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/lecture/mypack/: __init__.py
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/lecture/mypack/bar/: __init__.py  __main__.py
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/tasks/basic_module/: setup.cfg
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/: manager.py
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/exceptions/: __init__.py
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/utils/: __init__.py
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/utils/encryption/: __init__.py  encryption.py
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/utils/generation/: __init__.py  (+1 more)
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/tasks/steganography_tool/: .tester.json  README.md  pyproject.toml  setup.cfg  test_cli.py  test_module.py  test_public.py
sem5/python-shad/homeworks/06.1.ModulesPackagesImport/tasks/steganography_tool/steganography_tool/: __init__.py  cli.py  utils.py
(+1249 files in other folders)
