[metadata]
name = mypack
version = 0.2.0
author=Konstantin Chernyshev
description = An awesome package that does something
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
   
[options]
packages = find:
