[metadata]
name = simple_pass_manager
version = 0.0.69
author = Aboba Abobovich
author_email = aboba@gmail.com
summary = meemees
description = An awesome package that does simple passing dickhead
keywords = pass, password, manager
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    cryptography
