[metadata]
name = steganography_tool
version = 0.0.69
author = Aboba Abobovich
author_email = aboba@gmail.com
description = meemees
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
setup_requires =
    wheel
install_requires =
    Pillow
    click
python_requires = >=3.9

[options.entry_points]
console_scripts =
    steganography-tool = steganography_tool.cli:cli

[options.package_data]
* = lenna.png